# frm-spark-databricks

src/: pyproject.toml
src/app/: get-users-json.py  mod-2-pr-2.py  mod-2-pr-4-data-ingestion.py
src/databricks/mod-8/uber-eats-restaurant-analytics-delivery/: 01-bronze-tables.sql  02-silver-tables.sql  03-gold-dimensions.sql  04-gold-facts.sql  05-gold-analytics.sql
src/databricks/mod-8/uber-eats-unified-user-analytics-delivery/: 02-silver-users-staging.sql  03-silver-users-cdc.py  04-gold-user-change-audit.sql  04-gold-user-demographics.sql  04-gold-user-segments.sql  analysis-cdc-updates.sql  readme.md
