[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "rebecafmatias",email = "rebecafeitosamatias@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (==2.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyspark (==3.5.0)"
]
